--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			    	<button class="navbar-toggler d-none d-lg-flex" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Mega Menu">
 				        <span class="navbar-toggler-icon"></span>
-				        <span class="navbar-toggler-name">Navegue pelas secretarias</span>
+				        <span class="navbar-toggler-name">Estrutura SMS</span>
 				    </button>
 
 				    <ul class="navbar-nav mb-2 mb-lg-0">
@@ -118,55 +118,55 @@
 					<ul class="menu-level-1">
 						<li>Vigilância em Saúde (Covisa)
 							<ul class="row menu-level-2">
-								<li class="col-12 col-md-2">Vigilância Epidemiológica</li>
-								<li class="col-12 col-md-2">Vigilância de Zoonoses</li>
-								<li class="col-12 col-md-2">Vigilância Sanitária</li>
-								<li class="col-12 col-md-2">Vigilância em Saúde do Trabalhador</li>
-								<li class="col-12 col-md-2">Vigilância em Saúde Ambiental</li>
-								<li class="col-12 col-md-2">Programa de Imunização</li>
+								<li class="col-12 col-md-2"><a href="#">Vigilância Epidemiológica</a></li>
+								<li class="col-12 col-md-2"><a href="#">Vigilância de Zoonoses</a></li>
+								<li class="col-12 col-md-2"><a href="#">Vigilância Sanitária</a></li>
+								<li class="col-12 col-md-2"><a href="#">Vigilância em Saúde do Trabalhador</a></li>
+								<li class="col-12 col-md-2"><a href="#">Vigilância em Saúde Ambiental</a></li>
+								<li class="col-12 col-md-2"><a href="#">Programa de Imunização</a></li>
 							</ul>
 						</li>
 						<li>Coordenadoria de IST/AIDS
 							<ul class="row menu-level-2">
-								<li class="col-12 col-md-2">Administrativo</li>
-								<li class="col-12 col-md-2">Articulação</li>
-								<li class="col-12 col-md-2">Assistência</li>
-								<li class="col-12 col-md-2">Comunicação</li>
-								<li class="col-12 col-md-2">Coordenação</li>
-								<li class="col-12 col-md-2">Desenvolvimento Científico</li>
-								<li class="col-12 col-md-2">Informação e Vigilância</li>
-								<li class="col-12 col-md-2">Logística</li>
-								<li class="col-12 col-md-2">Planejamento</li>
-								<li class="col-12 col-md-2">Prevenção</li>
+								<li class="col-12 col-md-2"><a href="#">Administrativo</a></li>
+								<li class="col-12 col-md-2"><a href="#">Articulação</a></li>
+								<li class="col-12 col-md-2"><a href="#">Assistência</a></li>
+								<li class="col-12 col-md-2"><a href="#">Comunicação</a></li>
+								<li class="col-12 col-md-2"><a href="#">Coordenação</a></li>
+								<li class="col-12 col-md-2"><a href="#">Desenvolvimento Científico</a></li>
+								<li class="col-12 col-md-2"><a href="#">Informação e Vigilância</a></li>
+								<li class="col-12 col-md-2"><a href="#">Logística</a></li>
+								<li class="col-12 col-md-2"><a href="#">Planejamento</a></li>
+								<li class="col-12 col-md-2"><a href="#">Prevenção</a></li>
 							</ul>
 						</li>
 						<li>Coordenadoria Jurídica (Cojur)</li>
 						<li>Atenção Básica
 							<ul class="row menu-level-2">
-								<li class="col-12 col-md-2">Divisão de Ciclos de Vida
+								<li class="col-12 col-md-2"><a href="#">Divisão de Ciclos de Vida
 									<ul class="row menu-level-3">
-										<li>Área Técnica de Saúde da Mulher</li>
-										<li>Área Técnica de Saúde da Criança e do Adolescente</li>
-										<li>Área Técnica de Saúde da Pessoa Idosa</li>
+										<li><a href="#">Área Técnica de Saúde da Mulher</a></li>
+										<li><a href="#">Área Técnica de Saúde da Criança e do Adolescente</a></li>
+										<li><a href="#">Área Técnica de Saúde da Pessoa Idosa</a></li>
 									</ul>
 								</li>
-								<li class="col-12 col-md-2">Divisão de Saúde Mental e Tabagismo</li>
-								<li class="col-12 col-md-2">Divisão de Assistência Farmacêutica e Laboratorial de Enfermagem e Insumos Estratégicos
+								<li class="col-12 col-md-2"><a href="#">Divisão de Saúde Mental e Tabagismo</a></li>
+								<li class="col-12 col-md-2"><a href="#">Divisão de Assistência Farmacêutica e Laboratorial de Enfermagem e Insumos Estratégicos
 									<ul class="row menu-level-3">
-										<li>Assistência Farmacêutica</li>
-										<li>Assistência Laboratorial</li>
-										<li>Enfermagem</li>
+										<li><a href="#">Assistência Farmacêutica</a></li>
+										<li><a href="#">Assistência Laboratorial</a></li>
+										<li><a href="#">Enfermagem</a></li>
 									</ul>
 								</li>
-								<li class="col-12 col-md-2">Divisão de Promoção à Saúde
+								<li class="col-12 col-md-2"><a href="#">Divisão de Promoção à Saúde
 									<ul class="row menu-level-3">
-										<li>Atenção Integral à Saúde da Pessoa em Situação de Violência</li>
-										<li>Saúde Nutricional</li>
-										<li>Programa Academia da Saúde</li>
-										<li>Residência Multiprofissional em PICS</li>
-										<li>Programa ambientes Verdes e Saudáveis</li>
-										<li>Atenção Integral à Saúde da População Negra</li>
-										<li>Práticas Integrativas e Complementares em Saúde - PICS</li>
+										<li><a href="#">Atenção Integral à Saúde da Pessoa em Situação de Violência</a></li>
+										<li><a href="#">Saúde Nutricional</a></li>
+										<li><a href="#">Programa Academia da Saúde</a></li>
+										<li><a href="#">Residência Multiprofissional em PICS</a></li>
+										<li><a href="#">Programa ambientes Verdes e Saudáveis</a></li>
+										<li><a href="#">Atenção Integral à Saúde da População Negra</a></li>
+										<li><a href="#">Práticas Integrativas e Complementares em Saúde - PICS</a></li>
 									</ul>
 								</li>
 							</ul>
