Correção do menu

--- a/index.html
+++ b/index.html
@@ -76,41 +76,39 @@
 	</div>
 	<div class="menu-horizontal">
 		<div class="container-xxl">
-			 <nav class="navbar navbar-light navbar-expand-lg nav-principal">
-		    	
-
-			    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			    	<span class="navbar-toggler-icon"></span>
-			    </button>
-
-			    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-			    	<button class="navbar-toggler d-none d-lg-flex" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Mega Menu">
-				        <span class="navbar-toggler-icon"></span>
-				        <span class="navbar-toggler-name">Estrutura SMS</span>
+			<nav class="navbar navbar-expand-lg navbar-light bg-light nav-principal">
+				<div class="container-fluid">
+    				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				    	<span class="navbar-toggler-icon"></span>
 				    </button>
-
-				    <ul class="navbar-nav mb-2 mb-lg-0">
-						<li class="nav-item"><a class="menu-item" href="#">Home</a></li>
-						<li class="nav-item"><a class="menu-item" href="#">Comunicados</a></li>
-						<li class="nav-item"><a class="menu-item" href="#">Boletins</a></li>
-						<li class="nav-item"><a class="menu-item" href="#">Nossos programas</a></li>
-						<li class="nav-item"><a class="menu-item" href="#">+ Saúde para você</a></li>
-						<li class="nav-item"><a class="menu-item" href="#">Fala, gestor!</a></li>
-						<li class="nav-item"><a class="menu-item" href="#">Eventos</a></li>
-					</ul>
+				    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+				    	<button class="navbar-toggler d-none d-lg-flex" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Mega Menu">
+					        <span class="navbar-toggler-icon"></span>
+					        <span class="navbar-toggler-name">Estrutura SMS</span>
+					    </button>
+					    <ul class="navbar-nav mb-2 mb-lg-0">
+							<li class="nav-item"><a class="menu-item nav-link" href="#">Home</a></li>
+							<li class="nav-item"><a class="menu-item nav-link" href="#">Comunicados</a></li>
+							<li class="nav-item"><a class="menu-item nav-link" href="#">Boletins</a></li>
+							<li class="nav-item"><a class="menu-item nav-link" href="#">Nossos programas</a></li>
+							<li class="nav-item"><a class="menu-item nav-link" href="#">+ Saúde para você</a></li>
+							<li class="nav-item"><a class="menu-item nav-link" href="#">Fala, gestor!</a></li>
+							<li class="nav-item"><a class="menu-item nav-link" href="#">Eventos</a></li>
+						</ul>
+				    </div>
 				</div>
-
 			</nav>
+			 
 		</div>
 	</div>
 	<div class="mega-menu collapse navbar-collapse shadow-sm border" aria-labelledby="navbarsPrincipal" id="navbarsPrincipal">
 		<div class="container-xxl">
 			<nav>
 				<div class="nav nav-tabs" role="tablist">
-				    <button class="col-12 col-md-3 g-0 nav-link active" data-bs-toggle="tab" data-bs-target=".nav-basica" type="button" role="tab" aria-controls="nav-basica" aria-selected="true">Secretaria-executiva de Atenção Básica, Especialidades e Vigilância em Saúde</button>
-				    <button class="col-12 col-md-3 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-hospitalar" type="button" role="tab" aria-controls="nav-hospitalar" aria-selected="false">Secretaria-executiva de Atenção Hospitalar</button>
-				    <button class="col-12 col-md-3 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-administrativa" type="button" role="tab" aria-controls="nav-administrativa" aria-selected="false">Secretaria-executiva de Gestão Administrativa</button>
-				    <button class="col-12 col-md-3 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-monitoramento" type="button" role="tab" aria-controls="nav-monitoramento" aria-selected="false">Secretaria-executiva de Regulação Monitoramento, Avaliação e Parcerias</button>
+				    <button class="col-12 col-md-2 g-0 nav-link active" data-bs-toggle="tab" data-bs-target=".nav-basica" type="button" role="tab" aria-controls="nav-basica" aria-selected="true">Secretaria-executiva de Atenção Básica, Especialidades e Vigilância em Saúde</button>
+				    <button class="col-12 col-md-2 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-hospitalar" type="button" role="tab" aria-controls="nav-hospitalar" aria-selected="false">Secretaria-executiva de Atenção Hospitalar</button>
+				    <button class="col-12 col-md-2 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-administrativa" type="button" role="tab" aria-controls="nav-administrativa" aria-selected="false">Secretaria-executiva de Gestão Administrativa</button>
+				    <button class="col-12 col-md-2 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-monitoramento" type="button" role="tab" aria-controls="nav-monitoramento" aria-selected="false">Secretaria-executiva de Regulação Monitoramento, Avaliação e Parcerias</button>
 				</div>
 			</nav>
 			<div class="tab-content">
