Atualização do header

--- a/index.html
+++ b/index.html
@@ -76,6 +76,42 @@
 	</div>
 	<div class="menu-horizontal">
 		<div class="container-xxl">
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+
+</nav>
 			 <nav class="navbar navbar-light navbar-expand-lg nav-principal">
 		    	
 
@@ -83,19 +119,19 @@
 			    	<span class="navbar-toggler-icon"></span>
 			    </button>
 
-			    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			    	<button class="navbar-toggler d-none d-lg-flex" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Mega Menu">
 				        <span class="navbar-toggler-icon"></span>
-				        <span class="navbar-toggler-name">Navegue pelas secretarias</span>
+				        <span class="navbar-toggler-name">Estrutura SMS</span>
 				    </button>
+			    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
 				    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item"><a class="menu-item" href="#">Home</a></li>
 						<li class="nav-item"><a class="menu-item" href="#">Comunicados</a></li>
 						<li class="nav-item"><a class="menu-item" href="#">Boletins</a></li>
 						<li class="nav-item"><a class="menu-item" href="#">Nossos programas</a></li>
-						<li class="nav-item"><a class="menu-item" href="#">Especial Saúde</a></li>
-						<li class="nav-item"><a class="menu-item" href="#">Fala Gestor</a></li>
+						<li class="nav-item"><a class="menu-item" href="#">+ Saúde para você</a></li>
+						<li class="nav-item"><a class="menu-item" href="#">Fala, gestor!</a></li>
 						<li class="nav-item"><a class="menu-item" href="#">Eventos</a></li>
 					</ul>
 				</div>
@@ -109,7 +145,7 @@
 				<div class="nav nav-tabs" role="tablist">
 				    <button class="col-12 col-md-15 g-0 nav-link active" data-bs-toggle="tab" data-bs-target=".nav-basica" type="button" role="tab" aria-controls="nav-basica" aria-selected="true">Secretaria-executiva de Atenção Básica, Especialidades e Vigilância em Saúde</button>
 				    <button class="col-12 col-md-15 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-hospitalar" type="button" role="tab" aria-controls="nav-hospitalar" aria-selected="false">Secretaria-executiva de Atenção Hospitalar</button>
-				    <button class="col-12 col-md-15 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-administrativa" type="button" role="tab" aria-controls="nav-administrativa" aria-selected="false">Secretaria-executiva de Gestão Administrativa e Integrada</button>
+				    <button class="col-12 col-md-15 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-administrativa" type="button" role="tab" aria-controls="nav-administrativa" aria-selected="false">Secretaria-executiva de Gestão Administrativa</button>
 				    <button class="col-12 col-md-15 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-monitoramento" type="button" role="tab" aria-controls="nav-monitoramento" aria-selected="false">Secretaria-executiva de Regulação Monitoramento, Avaliação e Parcerias</button>
 				    <button class="col-12 col-md-15 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-cojur" type="button" role="tab" aria-controls="nav-cojur" aria-selected="false">Coordenadoria Jurídica (Cojur)</button>
 				</div>
@@ -371,13 +407,13 @@
 			<div class="col-6 col-md-3 p-3 text-center">
 				<a href="#" class="link-especial-saude">
 					<img src="img/conta-pra-gente.svg">
-					<h3 class="text-center">Conta pra Gente</h3>
+					<h3 class="text-center">Conta para a Gente</h3>
 				</a>
 			</div>
 			<div class="col-6 col-md-3 p-3 text-center">
 				<a href="#" class="link-especial-saude">
 					<img src="img/cuide-se-tambem.svg">
-					<h3 class="text-center">Cuide-se também</h3>
+					<h3 class="text-center">Cuide-se Também</h3>
 				</a>
 			</div>
 			<div class="col-6 col-md-3 p-3 text-center">
@@ -395,7 +431,7 @@
 
 			<div class="col-12 col-md-6 mb-3 mt-3 fala-gestor">
 
-				<h2><img src="img/fala-gestor.svg">Fala Gestor</h2>
+				<h2><img src="img/fala-gestor.svg">Fala, gestor!</h2>
 
 				<div class="row bg-light border rounded shadow-sm g-0">
 					<div class="col-12 col-md-5 p-3">
