Paddings menu usuário

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					          	</div>
 					            <img src="https://github.com/mdo.png" alt="Nome do Usuário" width="50" height="50" class="rounded-circle">
 					          </a>
-					          <ul class="dropdown-menu dropdown-menu-end text-small shadow" aria-labelledby="dropdownUser2">
+					          <ul class="dropdown-menu dropdown-menu-end text-small shadow p-3" aria-labelledby="dropdownUser2">
 					            <li><a class="menu-item" href="#">Editar perfil...</a></li>
 					            <li><a class="menu-item" href="#">Configurações</a></li>
 					            <li><hr class="dropdown-divider"></li>
