--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<link rel="stylesheet" type="text/css" href="assets/dist/css/bootstrap.min.css" >
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 <body>
-
 	<header class="site-header">
 		<div class="container-xxl">
 			<div class="row d-flex align-items-center">
@@ -76,16 +76,17 @@
 	</div>
 	<div class="menu-horizontal">
 		<div class="container-xxl">
-			<nav class="navbar navbar-expand-lg navbar-light bg-light nav-principal">
+			<nav class="navbar navbar-expand-lg navbar-light nav-principal">
 				<div class="container-fluid">
+					<button class="navbar-toggler d-flex" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Mega Menu">
+				        <span class="navbar-toggler-icon"></span>
+				        <span class="navbar-toggler-name">Estrutura SMS</span>
+				    </button>
+
     				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				    	<span class="navbar-toggler-icon"></span>
 				    </button>
-				    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-				    	<button class="navbar-toggler d-none d-lg-flex" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Mega Menu">
-					        <span class="navbar-toggler-icon"></span>
-					        <span class="navbar-toggler-name">Estrutura SMS</span>
-					    </button>
+				    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">				    	
 					    <ul class="navbar-nav mb-2 mb-lg-0">
 							<li class="nav-item"><a class="menu-item nav-link" href="#">Home</a></li>
 							<li class="nav-item"><a class="menu-item nav-link" href="#">Comunicados</a></li>
@@ -101,62 +102,73 @@
 			 
 		</div>
 	</div>
+
 	<div class="mega-menu collapse navbar-collapse shadow-sm border" aria-labelledby="navbarsPrincipal" id="navbarsPrincipal">
 		<div class="container-xxl">
-			<nav>
-				<div class="nav nav-tabs" role="tablist">
-				    <button class="col-12 col-md-2 g-0 nav-link active" data-bs-toggle="tab" data-bs-target=".nav-basica" type="button" role="tab" aria-controls="nav-basica" aria-selected="true">Secretaria-executiva de Atenção Básica, Especialidades e Vigilância em Saúde</button>
-				    <button class="col-12 col-md-2 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-hospitalar" type="button" role="tab" aria-controls="nav-hospitalar" aria-selected="false">Secretaria-executiva de Atenção Hospitalar</button>
-				    <button class="col-12 col-md-2 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-administrativa" type="button" role="tab" aria-controls="nav-administrativa" aria-selected="false">Secretaria-executiva de Gestão Administrativa</button>
-				    <button class="col-12 col-md-2 g-0 nav-link" data-bs-toggle="tab" data-bs-target=".nav-monitoramento" type="button" role="tab" aria-controls="nav-monitoramento" aria-selected="false">Secretaria-executiva de Regulação Monitoramento, Avaliação e Parcerias</button>
-				</div>
-			</nav>
-			<div class="tab-content">
-				<div class="tab-pane fade show active nav-basica" role="tabpanel" aria-labelledby="nav-basica-tab">
-					<ul class="menu-level-1">
-						<li>Vigilância em Saúde (Covisa)
+			<ul class="menu-level-0 row">
+				<li class="col-12 g-0">
+					<a href="#" class="nav-link">Assessoria Técnica</a>					
+				</li>
+				<li class="col-12 g-0">
+					<a href="#" class="nav-link">Assessoria de Planejamento</a>					
+				</li>
+				<li class="col-12 g-0">
+					<a href="#" class="nav-link">Assessoria de Comunicação</a>					
+				</li>
+				<li class="col-12 g-0">
+					<a href="#" class="nav-link">Assessoria Parlamentar e Gestão Participativa</a>					
+				</li>
+				<li class="col-12 g-0">
+					<a href="#" class="nav-link">Divisão de Incorporação e Avaliação de Tecnologia em Saúde</a>					
+				</li>
+				<li class="col-12 g-0">
+					<a href="#" class="nav-link">Unidade de Coordenação de Projetos - UCP</a>					
+				</li>
+				<li class="col-12 g-0">
+					<a href="#" class="nav-link">Secretaria-executiva de Atenção Básica, Especialidades e Vigilância em Saúde</a>
+					<ul class="row menu-level-1">
+						<li class="col-12">Vigilância em Saúde (Covisa)
 							<ul class="row menu-level-2">
-								<li class="col-12 col-md-2"><a href="#">Vigilância Epidemiológica</a></li>
-								<li class="col-12 col-md-2"><a href="#">Vigilância de Zoonoses</a></li>
-								<li class="col-12 col-md-2"><a href="#">Vigilância Sanitária</a></li>
-								<li class="col-12 col-md-2"><a href="#">Vigilância em Saúde do Trabalhador</a></li>
-								<li class="col-12 col-md-2"><a href="#">Vigilância em Saúde Ambiental</a></li>
-								<li class="col-12 col-md-2"><a href="#">Programa de Imunização</a></li>
+								<li class="col-12 g-0"><a href="#">Vigilância Epidemiológica</a></li>
+								<li class="col-12 g-0"><a href="#">Vigilância de Zoonoses</a></li>
+								<li class="col-12 g-0"><a href="#">Vigilância Sanitária</a></li>
+								<li class="col-12 g-0"><a href="#">Vigilância em Saúde do Trabalhador</a></li>
+								<li class="col-12 g-0"><a href="#">Vigilância em Saúde Ambiental</a></li>
+								<li class="col-12 g-0"><a href="#">Programa de Imunização</a></li>
 							</ul>
 						</li>
-						<li>Coordenadoria de IST/AIDS
+						<li class="col-12">Coordenadoria de IST/AIDS
 							<ul class="row menu-level-2">
-								<li class="col-12 col-md-2"><a href="#">Administrativo</a></li>
-								<li class="col-12 col-md-2"><a href="#">Articulação</a></li>
-								<li class="col-12 col-md-2"><a href="#">Assistência</a></li>
-								<li class="col-12 col-md-2"><a href="#">Comunicação</a></li>
-								<li class="col-12 col-md-2"><a href="#">Coordenação</a></li>
-								<li class="col-12 col-md-2"><a href="#">Desenvolvimento Científico</a></li>
-								<li class="col-12 col-md-2"><a href="#">Informação e Vigilância</a></li>
-								<li class="col-12 col-md-2"><a href="#">Logística</a></li>
-								<li class="col-12 col-md-2"><a href="#">Planejamento</a></li>
-								<li class="col-12 col-md-2"><a href="#">Prevenção</a></li>
+								<li class="col-12 g-0"><a href="#">Administrativo</a></li>
+								<li class="col-12 g-0"><a href="#">Articulação</a></li>
+								<li class="col-12 g-0"><a href="#">Assistência</a></li>
+								<li class="col-12 g-0"><a href="#">Comunicação</a></li>
+								<li class="col-12 g-0"><a href="#">Coordenação</a></li>
+								<li class="col-12 g-0"><a href="#">Desenvolvimento Científico</a></li>
+								<li class="col-12 g-0"><a href="#">Informação e Vigilância</a></li>
+								<li class="col-12 g-0"><a href="#">Logística</a></li>
+								<li class="col-12 g-0"><a href="#">Planejamento</a></li>
+								<li class="col-12 g-0"><a href="#">Prevenção</a></li>
 							</ul>
 						</li>
-						<li>Coordenadoria Jurídica (Cojur)</li>
-						<li>Atenção Básica
+						<li class="col-12">Atenção Básica
 							<ul class="row menu-level-2">
-								<li class="col-12 col-md-2"><a href="#">Divisão de Ciclos de Vida
+								<li class="col-12 g-0"><a href="#">Divisão de Ciclos de Vida
 									<ul class="row menu-level-3">
 										<li><a href="#">Área Técnica de Saúde da Mulher</a></li>
 										<li><a href="#">Área Técnica de Saúde da Criança e do Adolescente</a></li>
 										<li><a href="#">Área Técnica de Saúde da Pessoa Idosa</a></li>
 									</ul>
 								</li>
-								<li class="col-12 col-md-2"><a href="#">Divisão de Saúde Mental e Tabagismo</a></li>
-								<li class="col-12 col-md-2"><a href="#">Divisão de Assistência Farmacêutica e Laboratorial de Enfermagem e Insumos Estratégicos
+								<li class="col-12 g-0"><a href="#">Divisão de Saúde Mental e Tabagismo</a></li>
+								<li class="col-12 g-0"><a href="#">Divisão de Assistência Farmacêutica e Laboratorial de Enfermagem e Insumos Estratégicos
 									<ul class="row menu-level-3">
 										<li><a href="#">Assistência Farmacêutica</a></li>
 										<li><a href="#">Assistência Laboratorial</a></li>
 										<li><a href="#">Enfermagem</a></li>
 									</ul>
 								</li>
-								<li class="col-12 col-md-2"><a href="#">Divisão de Promoção à Saúde
+								<li class="col-12 g-0"><a href="#">Divisão de Promoção à Saúde
 									<ul class="row menu-level-3">
 										<li><a href="#">Atenção Integral à Saúde da Pessoa em Situação de Violência</a></li>
 										<li><a href="#">Saúde Nutricional</a></li>
@@ -169,15 +181,24 @@
 								</li>
 							</ul>
 						</li>
-					</ul>
-				</div>
-				<div class="tab-pane fade nav-hospitalar" role="tabpanel" aria-labelledby="nav-hospitalar-tab">2</div>
-				<div class="tab-pane fade nav-administrativa" role="tabpanel" aria-labelledby="nav-administrativa-tab">3</div>
-				<div class="tab-pane fade nav-monitoramento" role="tabpanel" aria-labelledby="nav-monitoramento-tab">4</div>
-				<div class="tab-pane fade nav-cojur" role="tabpanel" aria-labelledby="nav-cojur-tab">5</div>
-			</div>
+					</ul>				
+				</li>
+				<li class="col-12 g-0">
+					<a href="#" class="nav-link">Secretaria-executiva de Atenção Hospitalar</a>
+				</li>
+				<li class="col-12 g-0">
+					<a href="#" class="nav-link">Secretaria-executiva de Gestão Administrativa</a>
+				</li>
+				<li class="col-12 g-0">
+					<a href="#" class="nav-link">Secretaria-executiva de Regulação Monitoramento, Avaliação e Parcerias</a>
+				</li>
+				<li class="col-12 g-0">
+					<a href="#" class="nav-link">Coordenadoria Jurídica (Cojur)</a>
+				</li>
+			</ul>
 		</div>
 	</div>
+
 	<main class="container-xxl">
 		<div class="row mt-3 mb-3">
 			<!-- Carousel - Inicio-->
@@ -483,7 +504,16 @@
 		<p class="copyright">Prefeitura do Município de São Paulo</p>
 	</footer>
 
-	<script src="assets/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="assets/dist/js/bootstrap.bundle.min.js" type="text/javascript"></script>
+	<script src="assets/dist/js/jquery.js" type="text/javascript"></script>
+	<script>
+	jQuery(document).ready(function(){
+	    jQuery('.navbar-toggler').on('click', function(e){
+	        jQuery('html').toggleClass('menu-active');
+	        e.preventDefault();
+	    });
+	});
+	</script>
 
 </body>
 </html>
