Formatação do novo menu adaptada para o mobile

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 	<div class="mega-menu collapse navbar-collapse shadow-sm border" aria-labelledby="navbarsPrincipal" id="navbarsPrincipal">
 		<div class="container-xxl">
-			<ul class="menu-level-0 row">
+			<ul class="menu-level-0">
 				<li class="col-12 g-0">
 					<a href="#" class="nav-link">Assessoria Técnica</a>					
 				</li>
@@ -126,9 +126,9 @@
 				</li>
 				<li class="col-12 g-0">
 					<a href="#" class="nav-link">Secretaria-executiva de Atenção Básica, Especialidades e Vigilância em Saúde</a>
-					<ul class="row menu-level-1">
+					<ul class="menu-level-1">
 						<li class="col-12">Vigilância em Saúde (Covisa)
-							<ul class="row menu-level-2">
+							<ul class="menu-level-2">
 								<li class="col-12 g-0"><a href="#">Vigilância Epidemiológica</a></li>
 								<li class="col-12 g-0"><a href="#">Vigilância de Zoonoses</a></li>
 								<li class="col-12 g-0"><a href="#">Vigilância Sanitária</a></li>
@@ -138,7 +138,7 @@
 							</ul>
 						</li>
 						<li class="col-12">Coordenadoria de IST/AIDS
-							<ul class="row menu-level-2">
+							<ul class="menu-level-2">
 								<li class="col-12 g-0"><a href="#">Administrativo</a></li>
 								<li class="col-12 g-0"><a href="#">Articulação</a></li>
 								<li class="col-12 g-0"><a href="#">Assistência</a></li>
@@ -152,7 +152,7 @@
 							</ul>
 						</li>
 						<li class="col-12">Atenção Básica
-							<ul class="row menu-level-2">
+							<ul class="menu-level-2">
 								<li class="col-12 g-0"><a href="#">Divisão de Ciclos de Vida
 									<ul class="row menu-level-3">
 										<li><a href="#">Área Técnica de Saúde da Mulher</a></li>
@@ -162,14 +162,14 @@
 								</li>
 								<li class="col-12 g-0"><a href="#">Divisão de Saúde Mental e Tabagismo</a></li>
 								<li class="col-12 g-0"><a href="#">Divisão de Assistência Farmacêutica e Laboratorial de Enfermagem e Insumos Estratégicos
-									<ul class="row menu-level-3">
+									<ul class="menu-level-3">
 										<li><a href="#">Assistência Farmacêutica</a></li>
 										<li><a href="#">Assistência Laboratorial</a></li>
 										<li><a href="#">Enfermagem</a></li>
 									</ul>
 								</li>
 								<li class="col-12 g-0"><a href="#">Divisão de Promoção à Saúde
-									<ul class="row menu-level-3">
+									<ul class="menu-level-3">
 										<li><a href="#">Atenção Integral à Saúde da Pessoa em Situação de Violência</a></li>
 										<li><a href="#">Saúde Nutricional</a></li>
 										<li><a href="#">Programa Academia da Saúde</a></li>
