--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				<li class="col-12 g-0">
 					<a href="#" class="nav-link">Secretaria-executiva de Atenção Básica, Especialidades e Vigilância em Saúde</a>
 					<ul class="menu-level-1">
-						<li class="col-12">Vigilância em Saúde (Covisa)
+						<li class="col-12 g-0"><a href="#" class="nav-link">Vigilância em Saúde (Covisa)</a>
 							<ul class="menu-level-2">
 								<li class="col-12 g-0"><a href="#">Vigilância Epidemiológica</a></li>
 								<li class="col-12 g-0"><a href="#">Vigilância de Zoonoses</a></li>
@@ -137,7 +137,7 @@
 								<li class="col-12 g-0"><a href="#">Programa de Imunização</a></li>
 							</ul>
 						</li>
-						<li class="col-12">Coordenadoria de IST/AIDS
+						<li class="col-12"><a href="#" class="nav-link">Coordenadoria de IST/AIDS</a>
 							<ul class="menu-level-2">
 								<li class="col-12 g-0"><a href="#">Administrativo</a></li>
 								<li class="col-12 g-0"><a href="#">Articulação</a></li>
@@ -151,10 +151,10 @@
 								<li class="col-12 g-0"><a href="#">Prevenção</a></li>
 							</ul>
 						</li>
-						<li class="col-12">Atenção Básica
+						<li class="col-12"><a href="#" class="nav-link">Atenção Básica</a>
 							<ul class="menu-level-2">
 								<li class="col-12 g-0"><a href="#">Divisão de Ciclos de Vida
-									<ul class="row menu-level-3">
+									<ul class="menu-level-3">
 										<li><a href="#">Área Técnica de Saúde da Mulher</a></li>
 										<li><a href="#">Área Técnica de Saúde da Criança e do Adolescente</a></li>
 										<li><a href="#">Área Técnica de Saúde da Pessoa Idosa</a></li>
@@ -507,10 +507,15 @@
 	<script src="assets/dist/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 	<script src="assets/dist/js/jquery.js" type="text/javascript"></script>
 	<script>
-	jQuery(document).ready(function(){
-	    jQuery('.navbar-toggler').on('click', function(e){
-	        jQuery('html').toggleClass('menu-active');
+	$(document).ready(function(){
+	    $('.navbar-toggler').on('click', function(e){
+	        $('html').toggleClass('menu-active');
 	        e.preventDefault();
+	    });
+
+	    $('.mega-menu a').on('click', function(e){
+	    	$(this).toggleClass('ativo');
+	    	e.preventDefault();
 	    });
 	});
 	</script>
