Formatação dos submenus

--- a/index.html
+++ b/index.html
@@ -514,6 +514,7 @@
 	    });
 
 	    $('.mega-menu a').on('click', function(e){
+	    	//$('a.ativo').removeClass('ativo');
 	    	$(this).toggleClass('ativo');
 	    	e.preventDefault();
 	    });
