--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div class="row d-flex align-items-center">
 
 				<div class="col-9 col-md-4 logo"> 
-			        <a href="#" class="brand">
+			        <a href="index.html" class="brand">
 						<img src="img/logo-pmsp.svg">
 					</a>					
 				</div>
@@ -88,13 +88,13 @@
 				    </button>
 				    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">				    	
 					    <ul class="navbar-nav mb-2 mb-lg-0">
-							<li class="nav-item"><a class="menu-item nav-link" href="#">Home</a></li>
-							<li class="nav-item"><a class="menu-item nav-link" href="#">Comunicados</a></li>
-							<li class="nav-item"><a class="menu-item nav-link" href="#">Boletins</a></li>
-							<li class="nav-item"><a class="menu-item nav-link" href="#">Nossos programas</a></li>
-							<li class="nav-item"><a class="menu-item nav-link" href="#">+ Saúde para você</a></li>
-							<li class="nav-item"><a class="menu-item nav-link" href="#">Fala, gestor!</a></li>
-							<li class="nav-item"><a class="menu-item nav-link" href="#">Eventos</a></li>
+							<li class="nav-item"><a class="menu-item nav-link" href="index.html">Home</a></li>
+							<li class="nav-item"><a class="menu-item nav-link" href="comunicados.html">Comunicados</a></li>
+							<li class="nav-item"><a class="menu-item nav-link" href="boletins.html">Boletins</a></li>
+							<li class="nav-item"><a class="menu-item nav-link" href="nossos-programas.html">Nossos programas</a></li>
+							<li class="nav-item"><a class="menu-item nav-link" href="mais-saude-para-voce.html">+ Saúde para você</a></li>
+							<li class="nav-item"><a class="menu-item nav-link" href="fala-gestor.html">Fala, gestor!</a></li>
+							<li class="nav-item"><a class="menu-item nav-link" href="eventos.html">Eventos</a></li>
 						</ul>
 				    </div>
 				</div>
@@ -104,10 +104,10 @@
 	</div>
 
 	<div class="mega-menu collapse navbar-collapse shadow-sm border" aria-labelledby="navbarsPrincipal" id="navbarsPrincipal">
-		<div class="container-xxl">
+		<div class="row">
 			<ul class="menu-level-0">
 				<li class="col-12 g-0">
-					<a href="#" class="nav-link">Assessoria Técnica</a>					
+					<a href="#" class="nav-link">Assessoria Técnica</a>			
 				</li>
 				<li class="col-12 g-0">
 					<a href="#" class="nav-link">Assessoria de Planejamento</a>					
@@ -116,13 +116,13 @@
 					<a href="#" class="nav-link">Assessoria de Comunicação</a>					
 				</li>
 				<li class="col-12 g-0">
-					<a href="#" class="nav-link">Assessoria Parlamentar e Gestão Participativa</a>					
+					<a href="#" class="nav-link">Assessoria Parlamentar e Gestão Participativa</a>		
 				</li>
 				<li class="col-12 g-0">
 					<a href="#" class="nav-link">Divisão de Incorporação e Avaliação de Tecnologia em Saúde</a>					
 				</li>
 				<li class="col-12 g-0">
-					<a href="#" class="nav-link">Unidade de Coordenação de Projetos - UCP</a>					
+					<a href="#" class="nav-link">Unidade de Coordenação de Projetos - UCP</a>			
 				</li>
 				<li class="col-12 g-0">
 					<a href="#" class="nav-link">Secretaria-executiva de Atenção Básica, Especialidades e Vigilância em Saúde</a>
