--- a/comunicados.html
+++ b/comunicados.html
@@ -200,6 +200,106 @@
 	</div>
 
 	<main class="container-xxl">
+		
+		<div class="row mt-3 mb-3">
+			<h2 class="azul">Comunicados</h2>
+			<!-- Carousel - Inicio-->
+			<div class="col-12 col-md-9 destaque mb-3">
+				<div id="carouselDestaque" class="carousel slide rounded shadow-sm" data-bs-ride="carousel">
+				  <div class="carousel-indicators">
+				    <button type="button" data-bs-target="#carouselDestaque" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+				    <button type="button" data-bs-target="#carouselDestaque" data-bs-slide-to="1" aria-label="Slide 2"></button>
+				    <button type="button" data-bs-target="#carouselDestaque" data-bs-slide-to="2" aria-label="Slide 3"></button>
+				  </div>
+				  <div class="carousel-inner">
+				    <div class="carousel-item active">
+				      <img src="img/banner-destaque.jpg" class="d-block w-100 border rounded shadow-sm" alt="...">
+				    </div>
+				    <div class="carousel-item">
+				      <img src="img/slide2.jpg" class="d-block w-100 border rounded shadow-sm" alt="...">
+				    </div>
+				    <div class="carousel-item">
+				      <img src="img/banner-destaque.jpg" class="d-block w-100 border rounded shadow-sm" alt="...">
+				    </div>
+				  </div>
+				  <button class="carousel-control-prev" type="button" data-bs-target="#carouselDestaque" data-bs-slide="prev">
+				    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				    <span class="visually-hidden">Previous</span>
+				  </button>
+				  <button class="carousel-control-next" type="button" data-bs-target="#carouselDestaque" data-bs-slide="next">
+				    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+				    <span class="visually-hidden">Next</span>
+				  </button>
+				</div>				
+			</div>
+			<!-- Carousel - Fim-->
+
+			<!-- Comunicados - Início -->
+			<div class="col-12 col-md-3">
+				<div class="row g-0 bg-light border rounded shadow-sm p-3 comunicados">
+					<div class="col-12">
+						<h2>+ Recentes</h2>
+
+						<div class="comunicado-thumbnail mb-1">
+							<a class="link-comunicado" href="#">
+								<img src="img/comunicado-saude.jpg">
+							</a>
+						</div>
+
+						<a href="#" class="ver-todos">Ver todos</a>
+					</div>
+				</div>
+
+			</div>
+			<!-- Comunicados - Fim -->
+		</div>
+
+		<div class="row mt-3 mb-3 veja-tambem">
+
+			<div class="col-12 pb-3">
+				<div class="row g-0 bg-light border rounded shadow-sm p-3 h-100">
+					<h3 class="azul titulo-veja-tambem g-3">Veja também</h3>
+
+					<div class="col-6 col-md-3 g-3">
+						<a href="#"><img src="img/mais-boletins.jpg" class="border"></a>
+						<a href="#" class="bt-download azul">Download</a>
+					</div>
+
+					<div class="col-6 col-md-3 g-3">
+						<a href="#"><img src="img/mais-boletins.jpg" class="border"></a>
+						<a href="#" class="bt-download azul">Download</a>
+					</div>
+
+					<div class="col-6 col-md-3 g-3">
+						<a href="#"><img src="img/mais-boletins.jpg" class="border"></a>
+						<a href="#" class="bt-download azul">Download</a>
+					</div>
+
+					<div class="col-6 col-md-3 g-3">
+						<a href="#"><img src="img/mais-boletins.jpg" class="border"></a>
+						<a href="#" class="bt-download azul">Download</a>
+					</div>
+
+					<nav aria-label="Paginação Comunicados">
+					  <ul class="pagination justify-content-center bg-light">
+					    <li class="page-item">
+					      <a class="page-link" href="#" aria-label="Previous">
+					        <span aria-hidden="true">&laquo;</span>
+					      </a>
+					    </li>
+					    <li class="page-item"><a class="page-link" href="#">1</a></li>
+					    <li class="page-item"><a class="page-link" href="#">2</a></li>
+					    <li class="page-item"><a class="page-link" href="#">3</a></li>
+					    <li class="page-item">
+					      <a class="page-link" href="#" aria-label="Next">
+					        <span aria-hidden="true">&raquo;</span>
+					      </a>
+					    </li>
+					  </ul>
+					</nav>
+				</div>
+			</div>
+		</div>
 
 	</main>
 
