--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 							</a>
 						</div>
 
-						<a href="#" class="ver-todos">Ver todos</a>
+						<a href="comunicados.html" class="ver-todos">Ver todos</a>
 					</div>
 				</div>
 
@@ -442,7 +442,11 @@
 
 			<div class="col-12 col-md-6 mb-3 mt-3 fala-gestor">
 
-				<h2><img src="img/fala-gestor.svg">Fala, gestor!</h2>
+				<h2>
+					<a href="fala-gestor-pagina.html" class="text-left">
+						<img src="img/fala-gestor.svg">Fala, gestor!
+					</a>
+				</h2>
 
 				<div class="row bg-light border rounded shadow-sm g-0">
 					<div class="col-12 col-md-5 p-3">
@@ -451,11 +455,11 @@
 
 					<div class="col-12 col-md-7 p-3 d-flex flex-column justify-content-between">
 						<div class="header-gestor">
-						<h3>Nome do Gestor</h3>
+							<h3>Nome do Gestor</h3>
 							<p class="cargo">Cargo do Gestor</p>
 						</div>
 						<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining </p>
-						<a href="#" class="ver-mais">Leia o texto completo</a>
+						<a href="fala-gestor-pagina.html" class="ver-mais">Leia o texto completo</a>
 					</div>
 				</div>
 			</div>
