--- a/comunicados.html
+++ b/comunicados.html
@@ -281,7 +281,7 @@
 					</div>
 
 					<nav aria-label="Paginação Comunicados">
-					  <ul class="pagination justify-content-center bg-light">
+					  <ul class="pagination justify-content-center">
 					    <li class="page-item">
 					      <a class="page-link" href="#" aria-label="Previous">
 					        <span aria-hidden="true">&laquo;</span>
