--- a/fala-gestor-pagina.html
+++ b/fala-gestor-pagina.html
@@ -206,131 +206,31 @@
 				<h2 class="azul"><img src="img/fala-gestor.svg">Fala, gestor!</h2>
 			</div>
 
-			<div class="col-12 col-md-6 mb-3 mt-3 fala-gestor">
+			<div class="col-12 border rounded bg-light p-4">
+
+				<h3 class="titulo-fala-gestor azul">Título do artigo</h3>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec lorem a dui sollicitudin semper. Aenean sollicitudin volutpat odio, mollis consequat nisl fringilla quis. Phasellus turpis elit, pellentesque eu ligula sed, pretium blandit metus. Fusce ornare mollis lacinia. Praesent semper arcu vel dictum maximus. Pellentesque lacinia diam dui, eu ultrices urna vestibulum nec. Curabitur sit amet leo scelerisque, euismod massa ac, porta dui. Integer sit amet nisi convallis, lobortis elit a, dapibus augue. Aenean suscipit fringilla diam, sed consectetur ligula facilisis rutrum. Vestibulum et venenatis tellus. In fringilla velit a sapien dignissim, eget porta metus ultrices. Donec eu blandit velit.</p>
+
+				<p>Maecenas lobortis mattis orci, eget ultrices quam ornare eu. Nulla sit amet elit arcu. Phasellus mattis ante nibh, quis bibendum velit ultricies non. Sed nec lectus ex. Nulla varius, nisi quis tempus pellentesque, ex augue suscipit enim, vel tincidunt lacus ante ut elit. Curabitur pretium at risus quis rutrum. Integer vel ex nunc. Nulla facilisi. Donec ut rutrum ipsum.</p>
+
+				<p>Curabitur at pretium diam. Proin lectus odio, rutrum pulvinar gravida et, mattis eget nunc. Nulla molestie egestas mauris, in lacinia urna sollicitudin sed. Duis rhoncus mauris nulla, quis faucibus ligula interdum non. Suspendisse potenti. Nulla leo nunc, placerat sit amet risus id, consequat vulputate mi. Nullam aliquam maximus mauris, lacinia ultrices eros scelerisque vel. Ut lacinia ex odio. Aliquam tincidunt venenatis dui, non faucibus mi luctus aliquet. Proin luctus aliquam vestibulum. Phasellus eleifend dolor at turpis porttitor auctor. Quisque eget magna malesuada, placerat leo at, faucibus diam. Sed malesuada dolor et accumsan ultrices. Suspendisse eu felis in nunc accumsan scelerisque sed nec velit. Nullam aliquet fermentum erat.</p>
 
 				<div class="row bg-light border rounded shadow-sm g-0">
-					<div class="col-12 col-md-5 p-3">
+					<div class="col-12 col-md-2 p-3">
 						<img src="img/foto-gestor.jpg" class="w-100" alt="Nome do Gestor">
 					</div>
 
-					<div class="col-12 col-md-7 p-3 d-flex flex-column justify-content-between">
+					<div class="col-12 col-md-9 p-3">
 						<div class="header-gestor">
-						<h3>Nome do Gestor</h3>
-							<p class="cargo">Cargo do Gestor</p>
+							<h3 class="azul">Nome do Gestor</h3>
+							<p class="cargo azul">Cargo do Gestor</p>
 						</div>
 						<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining </p>
-						<a href="fala-gestor-pagina.html" class="ver-mais">Leia o texto completo</a>
 					</div>
 				</div>
+
 			</div>
-
-			<div class="col-12 col-md-6 mb-3 mt-3 fala-gestor">
-
-				<div class="row bg-light border rounded shadow-sm g-0">
-					<div class="col-12 col-md-5 p-3">
-						<img src="img/foto-gestor.jpg" class="w-100" alt="Nome do Gestor">
-					</div>
-
-					<div class="col-12 col-md-7 p-3 d-flex flex-column justify-content-between">
-						<div class="header-gestor">
-						<h3>Nome do Gestor</h3>
-							<p class="cargo">Cargo do Gestor</p>
-						</div>
-						<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining </p>
-						<a href="fala-gestor-pagina.html" class="ver-mais">Leia o texto completo</a>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-12 col-md-6 mb-3 mt-3 fala-gestor">
-
-				<div class="row bg-light border rounded shadow-sm g-0">
-					<div class="col-12 col-md-5 p-3">
-						<img src="img/foto-gestor.jpg" class="w-100" alt="Nome do Gestor">
-					</div>
-
-					<div class="col-12 col-md-7 p-3 d-flex flex-column justify-content-between">
-						<div class="header-gestor">
-						<h3>Nome do Gestor</h3>
-							<p class="cargo">Cargo do Gestor</p>
-						</div>
-						<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining </p>
-						<a href="fala-gestor-pagina.html" class="ver-mais">Leia o texto completo</a>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-12 col-md-6 mb-3 mt-3 fala-gestor">
-
-				<div class="row bg-light border rounded shadow-sm g-0">
-					<div class="col-12 col-md-5 p-3">
-						<img src="img/foto-gestor.jpg" class="w-100" alt="Nome do Gestor">
-					</div>
-
-					<div class="col-12 col-md-7 p-3 d-flex flex-column justify-content-between">
-						<div class="header-gestor">
-						<h3>Nome do Gestor</h3>
-							<p class="cargo">Cargo do Gestor</p>
-						</div>
-						<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining </p>
-						<a href="fala-gestor-pagina.html" class="ver-mais">Leia o texto completo</a>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-12 col-md-6 mb-3 mt-3 fala-gestor">
-
-				<div class="row bg-light border rounded shadow-sm g-0">
-					<div class="col-12 col-md-5 p-3">
-						<img src="img/foto-gestor.jpg" class="w-100" alt="Nome do Gestor">
-					</div>
-
-					<div class="col-12 col-md-7 p-3 d-flex flex-column justify-content-between">
-						<div class="header-gestor">
-						<h3>Nome do Gestor</h3>
-							<p class="cargo">Cargo do Gestor</p>
-						</div>
-						<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining </p>
-						<a href="fala-gestor-pagina.html" class="ver-mais">Leia o texto completo</a>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-12 col-md-6 mb-3 mt-3 fala-gestor">
-
-				<div class="row bg-light border rounded shadow-sm g-0">
-					<div class="col-12 col-md-5 p-3">
-						<img src="img/foto-gestor.jpg" class="w-100" alt="Nome do Gestor">
-					</div>
-
-					<div class="col-12 col-md-7 p-3 d-flex flex-column justify-content-between">
-						<div class="header-gestor">
-						<h3>Nome do Gestor</h3>
-							<p class="cargo">Cargo do Gestor</p>
-						</div>
-						<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining </p>
-						<a href="fala-gestor-pagina.html" class="ver-mais">Leia o texto completo</a>
-					</div>
-				</div>
-			</div>
-
-			<nav aria-label="Paginação Comunicados">
-			  <ul class="pagination justify-content-center">
-			    <li class="page-item">
-			      <a class="page-link" href="#" aria-label="Previous">
-			        <span aria-hidden="true">&laquo;</span>
-			      </a>
-			    </li>
-			    <li class="page-item"><a class="page-link" href="#">1</a></li>
-			    <li class="page-item"><a class="page-link" href="#">2</a></li>
-			    <li class="page-item"><a class="page-link" href="#">3</a></li>
-			    <li class="page-item">
-			      <a class="page-link" href="#" aria-label="Next">
-			        <span aria-hidden="true">&raquo;</span>
-			      </a>
-			    </li>
-			  </ul>
-			</nav>
 
 		</div>
 
