--- a/nossos-programas.html
+++ b/nossos-programas.html
@@ -201,6 +201,66 @@
 
 	<main class="container-xxl">
 
+		<div class="row mt-3 mb-3 g-0 youtube">
+
+			<div class="capa">
+				<img src="img/capa-youtube.jpg">
+			</div>
+
+			<h2><img src="img/youtube.svg">Nossos programas</h2>
+
+			<div class="col-12 bg-light border rounded shadow-sm mb-3">
+
+				<div class="row g-0 programas">
+
+					<div class="col-6 col-md-3 p-3">
+						<a href="https://www.youtube.com/playlist?list=PLYEqQbVuP4YEgIgxDhcGrhKIfhEbfJ4hh" target="_blank">
+							<img src="img/1.jpg" class="w-100">
+						</a>
+					</div>
+					<div class="col-6 col-md-3 p-3">
+						<a href="https://www.youtube.com/playlist?list=PLYEqQbVuP4YGil-5XgKXH83hY90KrqwOt" target="_blank">
+							<img src="img/2.jpg" class="w-100">
+						</a>
+					</div>
+					<div class="col-6 col-md-3 p-3">
+						<a href="https://www.youtube.com/playlist?list=PLYEqQbVuP4YEb_Z5MHeK6WDW5XN-Lc_5A" target="_blank">
+							<img src="img/3.jpg" class="w-100">
+						</a>
+					</div>
+					<div class="col-6 col-md-3 p-3">
+						<a href="https://www.youtube.com/playlist?list=PLYEqQbVuP4YFYkhDP1yVjzInW8RuH3PVm" target="_blank">
+							<img src="img/4.jpg" class="w-100">
+						</a>
+					</div>
+					<div class="col-6 col-md-3 p-3">
+						<a href="https://www.youtube.com/playlist?list=PLYEqQbVuP4YFDe5ro82xF8WjKfwO4Ow6K" target="_blank">
+							<img src="img/5.jpg" class="w-100">
+						</a>
+					</div>
+					<div class="col-6 col-md-3 p-3">
+						<a href="https://www.youtube.com/playlist?list=PLYEqQbVuP4YFvvaYzoBrIlwHy70ipmxK2" target="_blank">
+							<img src="img/6.jpg" class="w-100">
+						</a>
+					</div>
+					<div class="col-6 col-md-3 p-3">
+						<a href="https://www.youtube.com/playlist?list=PLYEqQbVuP4YGNihLzDianBmEGfHv1zjct" target="_blank">
+							<img src="img/7.jpg" class="w-100">
+						</a>
+					</div>
+					<div class="col-6 col-md-3 p-3">
+						<a href="https://www.youtube.com/playlist?list=PLYEqQbVuP4YEC8Uya7F_bGqit7CHWE8qM" target="_blank">
+							<img src="img/8.jpg" class="w-100">
+						</a>
+					</div>
+				</div>
+
+			</div>
+
+			<a href="https://www.youtube.com/c/saudeprefsp" target="_blank" class="ver-todos">Assista a todos os vídeos no nosso canal</a>
+
+		</div>
+
 	</main>
 
 	<footer class="footer text-center d-flex align-items-center justify-content-center">
