--- a/eventos.html
+++ b/eventos.html
@@ -200,7 +200,26 @@
 	</div>
 
 	<main class="container-xxl">
+		<div class="row mt-3 mb-3">
+			<div class="eventos">
+				<h2 class="laranja"><img src="img/eventos.png">Eventos</h2>
+			</div>
 
+			<div class="col-12 col-md-6 p-3 bg-light border rounded">
+				<div class="evento-detalhes">
+					<div class="d-flex justify-content-between flex-column">
+						<div class="header-evento">
+							<h3>Nome do Evento 1</h3>
+							<p class="data">12/12/2022</p>
+							<p class="local">Local do Evento</p>
+						</div>
+						<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+						<a href="#" class="ver-mais laranja">Ver detalhes do evento</a>
+					</div>
+				</div>
+			</div>
+
+		</div>
 	</main>
 
 	<footer class="footer text-center d-flex align-items-center justify-content-center">
