--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 
 			<div class="col-12 col-md-6 mb-3 mt-3 eventos">
 
-				<h2><img src="img/eventos.png">Eventos</h2>
+				<h2><img src="img/eventos.png"><a href="eventos.html">Eventos</a></h2>
 
 				<div class="row bg-light border rounded shadow-sm g-0">
 					<div class="col-12 col-md-6 p-3 carousel slide" data-bs-ride="carousel">
